[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fogbed"
version = "1.3.0"
authors = [
  {name="Esaú Mascarenhas and Antonio Coutinho"},
]
description = "Fog and edge computing emulation platform."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "clusternet >= 0.9.3",
  "urllib3 >= 1.26.0"
]
keywords = ["networking", "emulator", "protocol", "Internet", "OpenFlow", "SDN", "fog", "edge"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Emulators"
]

[project.scripts]
fogbed = "fogbed.scripts:main"

[project.urls]
Homepage = "https://larsid.github.io/fogbed"
